Responsive fix [💄]
Fixed notification not fitting inside phone screen

--- a/style.css
+++ b/style.css
@@ -334,6 +334,17 @@ header
     margin-top: -80px;
 }
 
+.scroll-container p:hover,
+.scroll-container svg:hover
+{
+    cursor: pointer;
+}
+
+.link-container i:hover
+{
+    cursor: pointer;
+}
+
 .scroll-container p
 {
     transform: rotate(90deg);
@@ -506,6 +517,17 @@ header
     {
         margin-left: 30px;
     }
+    .notification
+    {
+        width: 300px;
+        height: 90px;
+    }
+    .notification .o-bar
+    {
+        width: 300px;
+        margin-top: 0px;
+    }
+    
 }
 
 @media (max-width: 1600px)
